api-gateway: migra para Spring Cloud Gateway 4.3 / Spring Security 6.5 / Java 21
- spring-cloud-starter-gateway -> spring-cloud-starter-gateway-server-webflux
- SecurityConfig: DSL lambda (csrf/oauth2ResourceServer), URI.create().toURL()
- config-files: spring.cloud.gateway.routes -> spring.cloud.gateway.server.webflux.routes
- failsafe para rodar *IT; novo SecurityConfigTest (WebTestClient)

Co-Authored-By: Thiago Magro <thiago.magro@gmail.com>